--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ nav>a {
     
     text-decoration: none;
     padding: 10px 10px 10px 50px;
+    color:#ccc;
    
 }
 
@@ -84,7 +85,7 @@ a {
 
 .why-us-btn {
    background-color: #88d7c7; 
-padding:12px 2em;
+
 
 border-radius:5px;
 
